<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:text="@string/filler_title"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/details" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Temp: "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dCurT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filler curT"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description: "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filler desc"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Temp Range: "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dMinT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filler min"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" - "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dMaxT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filler max"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity2"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dHum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_hum"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise2"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dSrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_srise"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset2"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dSset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_sset"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>